added login window to login page

--- a/frontend/src/assets/scss/base/_base.scss
+++ b/frontend/src/assets/scss/base/_base.scss
@@ -31,7 +31,13 @@ p {
   justify-content: space-between;
 }
 
+.justify-items-center {
+  justify-items: center;
+}
 
+.align-items-center {
+  align-items: center;
+}
 
 .primary-color {
   color: $primary-color;
