--- a/frontend/src/assets/scss/header/_header.scss
+++ b/frontend/src/assets/scss/header/_header.scss
@@ -1,11 +1,10 @@
 @import "../_variables";
 
 
-.header_logo {
+.header-logo {
   font-weight: bold;
   color: $main-text-color;
   font-size: 2.3em;
-  margin-right: 5em;
 }
 
 .inline_flex {
